feat(backend): add stories to backend
