# backend/app/Http/Requests/Story/CreateStoryRequest.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Http\Requests\Story;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class CreateStoryRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'image' => ['required', 'image', 'mimes:jpg,jpeg,png,webp', 'max:5120'],
+        ];
+    }
+}
